--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.19",
     "discord.js": "^14.15.3",
     "express": "^4.19.2",
